# mcp-registry

./: .gitignore  Cargo.toml
src/: main.rs
