[package]
name = "mcp-registry"
version = "0.1.0"
edition = "2024"
description = "Docker MCP Registry CLI -- build, catalog, create, validate, and wizard commands for managing MCP server definitions"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[[bin]]
name = "mcp-registry"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
